# Hestia

./: .env.example  .gitignore  PRD_Family_Hub_Display_v2.docx  PRD_Family_Hub_Display_v2.md  README.md  SETUP_GUIDE.md  UBUNTU_DEPLOYMENT.md  docker-compose.dev.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 4a1c9b2d8e10_recurrence_overrides.py  7c4f9b1d3a22_encrypt_oauth_tokens.py  8d1e7a2c4b59_add_other_listcategory.py  9f2a4d8c1e73_splash_privacy_settings.py  a3f2b1c0d4e5_routine_step_days_of_week.py  (+6 more)
backend/app/: config.py  database.py  main.py
backend/tests/: conftest.py  test_admin.py  test_admin_backup.py  test_auth.py  test_auth_extended.py  test_auth_lock.py  test_calendar.py  test_calendar_cross_household.py  test_calendar_mappers.py  test_cascades.py  test_dashboard.py  test_dashboard_advanced.py  test_event_expansion.py  test_ical_subscription.py  test_integrations_cross_household.py  test_list_features.py  test_lists.py  test_lists_extended.py  test_meals.py  test_meals_advanced.py  test_meals_cross_household.py  test_notes.py  test_notes_advanced.py  test_notification_inbox.py  test_notifications.py  test_oauth_encryption.py  test_photos.py  test_points_system.py  test_profile_lifecycle.py  test_profiles.py  test_profiles_cross_household.py  test_recurrence.py  test_rewards.py  test_rewards_redemption.py  test_routine_completion.py  test_routine_overrides.py  test_routine_step_assignment.py  test_routine_templates.py  test_routine_validation.py  test_routines.py  (+9 more)
(+171 files in other folders)
